<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_home"
    tools:context=".FormActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="320dp"
        android:layout_height="25dp"
        android:fontFamily="monospace"
        android:text="@string/cuestionario"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.618"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.094" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="224dp"
        android:layout_height="28dp"
        android:text="@string/marca"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.294"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="312dp"
        android:layout_height="210dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.23000002">

        <CheckBox
            android:id="@+id/cbDiminucion"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/disminucion" />

        <CheckBox
            android:id="@+id/cbTos"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/tos" />

        <CheckBox
            android:id="@+id/cbGarganta"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/garganta" />

        <CheckBox
            android:id="@+id/cbCongestion"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/nasal" />

        <CheckBox
            android:id="@+id/cbFiebre"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/fiebre" />

        <CheckBox
            android:id="@+id/cbNinguno"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/ninguno" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tienesfiebre"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.364"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.444" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="290dp"
        android:layout_height="35dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.48"
        tools:ignore="MissingConstraints">

        <RadioButton
            android:id="@+id/rbSi2"
            android:layout_width="154dp"
            android:layout_height="35dp"
            android:text="@string/si" />

        <RadioButton
            android:id="@+id/rbNo2"
            android:layout_width="132dp"
            android:layout_height="35dp"
            android:text="@string/no" />

    </RadioGroup>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vivessolo"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.222"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.514" />

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="295dp"
        android:layout_height="35dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.534"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.56">

        <RadioButton
            android:id="@+id/rbSi3"
            android:layout_width="154dp"
            android:layout_height="35dp"
            android:text="@string/si" />

        <RadioButton
            android:id="@+id/rbNo3"
            android:layout_width="135dp"
            android:layout_height="match_parent"
            android:text="@string/no" />

    </RadioGroup>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vivesconadulto"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.413"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.592"
        tools:ignore="MissingConstraints" />

    <RadioGroup
        android:id="@+id/radioGroup3"
        android:layout_width="292dp"
        android:layout_height="35dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.639">

        <RadioButton
            android:id="@+id/rbSi4"
            android:layout_width="152dp"
            android:layout_height="35dp"
            android:text="@string/si" />

        <RadioButton
            android:id="@+id/rbNo4"
            android:layout_width="138dp"
            android:layout_height="match_parent"
            android:text="@string/no" />
    </RadioGroup>







    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/servicios"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.667"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="317dp"
        android:layout_height="140dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.617"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.817">

        <CheckBox
            android:id="@+id/cbLuz"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/luz" />

        <CheckBox
            android:id="@+id/cbAgua"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/agua" />

        <CheckBox
            android:id="@+id/cbInternet"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/internet" />

        <CheckBox
            android:id="@+id/cbCable"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/cable" />
    </LinearLayout>

    <Button
        android:id="@+id/btnResolver"
        android:layout_width="179dp"
        android:layout_height="45dp"
        android:backgroundTint="@color/blue"
        android:text="@string/resolver"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        app:layout_constraintVertical_bias="0.182" />



</androidx.constraintlayout.widget.ConstraintLayout>